# MyAgent

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
data/docs/: README.md  symptoms.yaml
data/docs/postmortems/: pm-001-cascade-timeout.md  pm-002-downstream-http-404.md  pm-003-kafka-broker-disk-full.md  pm-004-object-storage-ctx-canceled.md  pm-005-slow-sql-join-explosion.md  pm-006-coredns-overload.md  pm-007-duplicate-key-import.md  pm-008-configsdk-reconnect-bug.md  pm-009-nil-pointer-new-device.md  pm-010-token-key-rotation-silent-failure.md  pm-011-distributed-lock-early-expire.md  pm-012-ctx-cancel-defer-bug.md
data/docs/runbooks/: kafka.md  mysql.md  prometheus.md  redis.md
data/docs/services/: edgectl-admin.md  edgectl-algo.md  edgectl-backend-http.md  edgectl-backend-scheduler.md  edgectl-backend-watcher.md  edgectl-gateway.md  edgectl-notification.md  edgectl-ugc.md
data/docs/sops/: sop-f1-cascade-timeout.md  sop-f10-token-decode-error.md  sop-f11-requeue-storm.md  sop-f12-stuck-task.md  sop-f13-401-mass-spread.md  sop-f2-downstream-http-error.md  sop-f3-kafka-error.md  sop-f4-object-storage-canceled.md  sop-f5-sql-ctx-canceled.md  sop-f6-dns-lookup-failed.md  sop-f7-mysql-business-error.md  sop-f8-configsdk-disconnect.md  sop-f9-panic-nil-pointer.md
data/logs/real/: README.md
data/logs/seeds/: README.md  fault_phrases.edgectl.yaml  schema.edgectl.yaml
data/logs/skeletons/: fault_F10_skeleton.jsonl  fault_F1_skeleton.jsonl  fault_F2_skeleton.jsonl  fault_F3_skeleton.jsonl  fault_F4_skeleton.jsonl  fault_F5_skeleton.jsonl  fault_F6_skeleton.jsonl  fault_F7_skeleton.jsonl  fault_F8_skeleton.jsonl  fault_F9_skeleton.jsonl
data/synthesizer/: critic_only.py  download_loghub.py  export_skeletons.py  llm_critic.py  llm_generator.py  run_all.py
data/synthesizer/fault_patterns/: base.py  f10_token_decode_error.py  f1_cascade_timeout.py  f2_downstream_http_404.py  f3_kafka_producer_failed.py  f4_tos_object_canceled.py  f5_sql_ctx_canceled.py  f6_dns_lookup_failed.py  f7_mysql_business_error.py  f8_configsdk_disconnect.py  f9_panic_nil_pointer.py
docs/: 使用说明.md  开发历程.md  架构设计.md
eval/: __init__.py  __main__.py  runner.py
eval/dataset/: __init__.py
eval/dataset/cases/: E001.yaml  E002.yaml  E003.yaml  E004.yaml  E005.yaml  E006.yaml  E007.yaml  E008.yaml  E009.yaml  E010.yaml  E011.yaml  E012.yaml  E013.yaml  E014.yaml  E015.yaml  E016.yaml  E017.yaml  E018.yaml  E019.yaml  E020.yaml  E021.yaml  E022.yaml  E023.yaml  E024.yaml  E025.yaml  E026.yaml  E027.yaml  E028.yaml  E029.yaml  E030.yaml  E031.yaml  E032.yaml  E033.yaml  E034.yaml  E035.yaml  E036.yaml  E037.yaml  E038.yaml  E039.yaml  E040.yaml  (+21 more)
eval/langfuse_export/: 01_pull_worker_spans.py  02_join_by_runid.py  03_group_traces.py  04_per_run_detail.py  05_clean_summary.py  06_timeout_estimate.py  README.md
eval/metrics/: __init__.py  ragas_eval.py  scorer.py
eval/retrieval/: queries.yaml
langfuse/: docker-compose.yml
opsagent/: __init__.py
opsagent/app/: main.py
opsagent/app/routes/: chat.py
opsagent/core/: config.py  observability.py
opsagent/core/graph/: builder.py  nodes.py  state.py
opsagent/core/llm/: client.py  litellm_config.yaml
opsagent/core/memory/: __init__.py  compactor.py  episodic.py  profile.py  store.py  system.py  working.py
opsagent/core/prompts/: __init__.py  answer.txt  plan.txt  (+8 more)
opsagent/ui/: chainlit_app.py
scripts/: analyze_batch.py  db_init.sql  eval_retrieval.py  fetch_logs_batch.py  fetch_uat_logs.py  fetch_uat_tls_logs.py  sample_real_pattern.py  test_graph.py  test_graph_on_real_log.py  test_graph_r4_user4528.py  test_graph_real_batch.py  test_graph_real_cases.py  test_llm.py  test_mcp.py  test_sse.py  tls_to_search_logs.py  validate_new_cases.py
tests/: test_eval_dataset.py  test_eval_scorer.py  test_graph_multi.py  test_mcp.py  test_memory.py  test_retrieval.py  test_retrieval_rewriter.py  test_tools_base.py  test_tools_fc.py
(+18 files in other folders)
